tests/ivg/invalid/bounds_width_out_of_range.ivg
format IVG-3
BOUNDS 0,0,0,10
